// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with logout button 1`] = `
<div
  className="coral coral-viewerBox"
>
  <Localized
    id="general-userBoxAuthenticated-signedIn"
  >
    <div
      className="UserBoxAuthenticated-text"
    >
      Signed in as
    </div>
  </Localized>
  <ForwardRef(forwardRef)
    alignItems="center"
    wrap={true}
  >
    <Username />
    <Localized
      button={
        <withPropsOnChange(Button)
          className="UserBoxAuthenticated-userBoxButton coral coral-viewerBox-logoutButton"
          color="primary"
          fontWeight="semiBold"
          marginSize="none"
          onClick={[Function]}
          textSize="small"
          underline={true}
          variant="flat"
        />
      }
      id="general-userBoxAuthenticated-notYou"
    >
      <span
        className="UserBoxAuthenticated-text UserBoxAuthenticated-signOut"
      >
        Not you? &lt;button&gt;Sign Out&lt;/button&gt;
      </span>
    </Localized>
  </ForwardRef(forwardRef)>
</div>
`;

exports[`renders correctly without logout button 1`] = `
<div
  className="coral coral-viewerBox"
>
  <Localized
    id="general-userBoxAuthenticated-signedIn"
  >
    <div
      className="UserBoxAuthenticated-text"
    >
      Signed in as
    </div>
  </Localized>
  <ForwardRef(forwardRef)
    alignItems="center"
    wrap={true}
  >
    <Username />
  </ForwardRef(forwardRef)>
</div>
`;
